{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 202,
  "lineage": "b88ef5bc-8695-0306-f5a0-6f16fbf2ef99",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ac45f3035ff009e",
            "arn": "arn:aws:ec2:eu-west-3:851725645667:instance/i-08cc2a8078ed33156",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cc2a8078ed33156",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyPair_AWS_EC2_Project_DevOps",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066bc687593a9029d",
            "private_dns": "ip-10-0-0-188.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.188",
            "public_ip": "35.180.23.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0859fffceb9fefbd0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0667e3b0c617583b7",
            "tags": {
              "Name": "EC2-Project-DevOps-Ansible-Docker-Terraform-MIL"
            },
            "tags_all": {
              "Name": "EC2-Project-DevOps-Ansible-Docker-Terraform-MIL"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09792dfad68ddb7bd"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.allow_ec2",
            "aws_subnet.subnet_devops",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:internet-gateway/igw-0c42f7cad444da1db",
            "id": "igw-0c42f7cad444da1db",
            "owner_id": "851725645667",
            "tags": {
              "Name": "gateway-devops"
            },
            "tags_all": {
              "Name": "gateway-devops"
            },
            "vpc_id": "vpc-0dd25638cbe06a593"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c42f7cad444da1db",
            "id": "r-rtb-08e97192fbd50e7801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e97192fbd50e780",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_devops",
            "aws_route_table.route_table_devops",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:route-table/rtb-08e97192fbd50e780",
            "id": "rtb-08e97192fbd50e780",
            "owner_id": "851725645667",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-table-1"
            },
            "tags_all": {
              "Name": "route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd25638cbe06a593"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adc835a91bf09c1b",
            "route_table_id": "rtb-08e97192fbd50e780",
            "subnet_id": "subnet-0667e3b0c617583b7"
          },
          "dependencies": [
            "aws_route_table.route_table_devops",
            "aws_subnet.subnet_devops",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:security-group/sg-09792dfad68ddb7bd",
            "description": "Allow traffic on EC2 instance",
            "egress": [],
            "id": "sg-09792dfad68ddb7bd",
            "ingress": [],
            "name": "allow_ec2",
            "name_prefix": "",
            "owner_id": "851725645667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ec2"
            },
            "tags_all": {
              "Name": "allow_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd25638cbe06a593"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:subnet/subnet-0667e3b0c617583b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0667e3b0c617583b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725645667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0dd25638cbe06a593"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:vpc/vpc-0dd25638cbe06a593",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cdbad97ead928a6e",
            "default_route_table_id": "rtb-0ef451ad79d5c514a",
            "default_security_group_id": "sg-096eba69249f751b8",
            "dhcp_options_id": "dopt-04f82bc35bf75c43e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd25638cbe06a593",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef451ad79d5c514a",
            "owner_id": "851725645667",
            "tags": {
              "Name": "DevOps project VPC"
            },
            "tags_all": {
              "Name": "DevOps project VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:security-group-rule/sgr-0ab6272a7a314344f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ab6272a7a314344f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09792dfad68ddb7bd",
            "security_group_rule_id": "sgr-0ab6272a7a314344f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ec2",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_traffic_my_ip_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:security-group-rule/sgr-017a4b86b01242f7b",
            "cidr_ipv4": "88.182.24.73/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-017a4b86b01242f7b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09792dfad68ddb7bd",
            "security_group_rule_id": "sgr-017a4b86b01242f7b",
            "tags": null,
            "tags_all": {},
            "to_port": 30000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ec2",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_traffic_my_ip_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:851725645667:security-group-rule/sgr-0e6a6c21452664ae8",
            "cidr_ipv4": "88.182.24.73/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e6a6c21452664ae8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09792dfad68ddb7bd",
            "security_group_rule_id": "sgr-0e6a6c21452664ae8",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ec2",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    }
  ]
}